# local-model-manager

./: .gitignore  CHARTER.md  DOCKSIDE-EXAM.md  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  README.md  TEST_SUITE_COMPLETED.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml  validate.yml
configs/: model_configs.yaml
examples/: demo.py
local_model_manager/: __init__.py
local_model_manager/api/: __init__.py  client.py  server.py
local_model_manager/core/: __init__.py  llm_loader.py  model_manager.py  parallel_manager.py  resource_manager.py
local_model_manager/monitoring/: __init__.py  gpu_monitor.py  memory_optimizer.py
scripts/: download_models.py  start_server.py  test_system.py
tests/: README.md  TEST_SUITE_SUMMARY.md  __init__.py  conftest.py  run_tests.py  test_api.py  test_client.py  test_gpu_monitor.py  test_integration.py  test_memory_optimizer.py  test_model_loader.py  test_parallel_manager.py  test_quick_verify.py  test_resource_manager.py
